// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListContainer Category Filtering renders filtered items without category buckets when filter exists 1`] = `
<div>
  <a
    class="float-end"
    data-discover="true"
    href="/lists"
  >
    Back to lists
  </a>
  <h1>
    foo
  </h1>
  <br />
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    data-test-id="add-item-button"
    type="button"
  >
    Add Item
  </button>
  <form
    autocomplete="off"
    class="collapse"
    data-test-id="list-item-form"
    id="form-collapse"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      role="status"
    >
      <div
        class="placeholder-glow"
      >
        <span
          class="placeholder col-6"
        />
        <span
          class="placeholder col-4"
        />
        <span
          class="placeholder col-8"
        />
      </div>
    </div>
    <div
      class="mb-3 mb-3"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="completed"
          name="completed"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="completed"
          title=""
        >
          Completed
        </label>
      </div>
    </div>
    <div
      class="d-grid gap-2 mt-3"
    >
      <button
        class="btn btn-success"
        type="submit"
      >
        Add New Item
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Collapse Form
      </button>
    </div>
  </form>
  <hr />
  <div
    class="d-flex justify-content-between"
  >
    <h2>
      Items
    </h2>
    <div>
      <span
        id="filter-title"
      >
        Filtering by:
      </span>
      <button
        class="btn btn-outline-primary"
        data-test-id="clear-filter"
        id="filter-button"
        type="button"
      >
        foo
         
        <i
          class="fa fa-trash"
        />
      </button>
    </div>
  </div>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-end btn btn-link"
      type="button"
    >
      Select
    </button>
  </div>
  <br />
  <h5
    data-test-class="category-header"
  >
    Foo
  </h5>
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity foo not completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id3"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id3"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id3"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity foo not completed product 2
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id4"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id4"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id4"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h2>
    Completed Items
  </h2>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-end btn btn-link"
      type="button"
    >
      Select
    </button>
  </div>
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            completed quantity foo completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="completed-item-refresh-id1"
              type="button"
            >
              <i
                class="fa fa-redo fa-2x text-primary"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="completed-item-edit-id1"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="completed-item-delete-id1"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListContainer Category Filtering renders items with category buckets when no filter is applied 1`] = `
<div>
  <a
    class="float-end"
    data-discover="true"
    href="/lists"
  >
    Back to lists
  </a>
  <h1>
    foo
  </h1>
  <br />
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    data-test-id="add-item-button"
    type="button"
  >
    Add Item
  </button>
  <form
    autocomplete="off"
    class="collapse"
    data-test-id="list-item-form"
    id="form-collapse"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      role="status"
    >
      <div
        class="placeholder-glow"
      >
        <span
          class="placeholder col-6"
        />
        <span
          class="placeholder col-4"
        />
        <span
          class="placeholder col-8"
        />
      </div>
    </div>
    <div
      class="mb-3 mb-3"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="completed"
          name="completed"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="completed"
          title=""
        >
          Completed
        </label>
      </div>
    </div>
    <div
      class="d-grid gap-2 mt-3"
    >
      <button
        class="btn btn-success"
        type="submit"
      >
        Add New Item
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Collapse Form
      </button>
    </div>
  </form>
  <hr />
  <div
    class="d-flex justify-content-between"
  >
    <h2>
      Items
    </h2>
    <div>
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          class="dropdown-toggle btn btn-light"
          id="filter-by-category-button"
          type="button"
        >
          Filter by category
        </button>
      </div>
    </div>
  </div>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-end btn btn-link"
      type="button"
    >
      Select
    </button>
  </div>
  <br />
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity no category not completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id2"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id2"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id2"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h5
    data-test-class="category-header"
  >
    Foo
  </h5>
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity foo not completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id3"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id3"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id3"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity foo not completed product 2
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id4"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id4"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id4"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h5
    data-test-class="category-header"
  >
    Bar
  </h5>
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity bar not completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id5"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id5"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id5"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h2>
    Completed Items
  </h2>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-end btn btn-link"
      type="button"
    >
      Select
    </button>
  </div>
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            completed quantity foo completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="completed-item-refresh-id1"
              type="button"
            >
              <i
                class="fa fa-redo fa-2x text-primary"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="completed-item-edit-id1"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="completed-item-delete-id1"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListContainer Delete Operations renders confirmation modal when delete is clicked 1`] = `
<div>
  <a
    class="float-end"
    data-discover="true"
    href="/lists"
  >
    Back to lists
  </a>
  <h1>
    foo
  </h1>
  <br />
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    data-test-id="add-item-button"
    type="button"
  >
    Add Item
  </button>
  <form
    autocomplete="off"
    class="collapse"
    data-test-id="list-item-form"
    id="form-collapse"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      role="status"
    >
      <div
        class="placeholder-glow"
      >
        <span
          class="placeholder col-6"
        />
        <span
          class="placeholder col-4"
        />
        <span
          class="placeholder col-8"
        />
      </div>
    </div>
    <div
      class="mb-3 mb-3"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="completed"
          name="completed"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="completed"
          title=""
        >
          Completed
        </label>
      </div>
    </div>
    <div
      class="d-grid gap-2 mt-3"
    >
      <button
        class="btn btn-success"
        type="submit"
      >
        Add New Item
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Collapse Form
      </button>
    </div>
  </form>
  <hr />
  <div
    class="d-flex justify-content-between"
  >
    <h2>
      Items
    </h2>
    <div>
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          class="dropdown-toggle btn btn-light"
          id="filter-by-category-button"
          type="button"
        >
          Filter by category
        </button>
      </div>
    </div>
  </div>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-end btn btn-link"
      type="button"
    >
      Select
    </button>
  </div>
  <br />
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity no category not completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id2"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id2"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id2"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h5
    data-test-class="category-header"
  >
    Foo
  </h5>
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity foo not completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id3"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id3"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id3"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity foo not completed product 2
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id4"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id4"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id4"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h5
    data-test-class="category-header"
  >
    Bar
  </h5>
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity bar not completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id5"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id5"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id5"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h2>
    Completed Items
  </h2>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-end btn btn-link"
      type="button"
    >
      Select
    </button>
  </div>
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            completed quantity foo completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="completed-item-refresh-id1"
              type="button"
            >
              <i
                class="fa fa-redo fa-2x text-primary"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="completed-item-edit-id1"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="completed-item-delete-id1"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListContainer Item Rendering does not render complete items when none exist 1`] = `
<div>
  <a
    class="float-end"
    data-discover="true"
    href="/lists"
  >
    Back to lists
  </a>
  <h1>
    foo
  </h1>
  <br />
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    data-test-id="add-item-button"
    type="button"
  >
    Add Item
  </button>
  <form
    autocomplete="off"
    class="collapse"
    data-test-id="list-item-form"
    id="form-collapse"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      role="status"
    >
      <div
        class="placeholder-glow"
      >
        <span
          class="placeholder col-6"
        />
        <span
          class="placeholder col-4"
        />
        <span
          class="placeholder col-8"
        />
      </div>
    </div>
    <div
      class="mb-3 mb-3"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="completed"
          name="completed"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="completed"
          title=""
        >
          Completed
        </label>
      </div>
    </div>
    <div
      class="d-grid gap-2 mt-3"
    >
      <button
        class="btn btn-success"
        type="submit"
      >
        Add New Item
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Collapse Form
      </button>
    </div>
  </form>
  <hr />
  <div
    class="d-flex justify-content-between"
  >
    <h2>
      Items
    </h2>
    <div>
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          class="dropdown-toggle btn btn-light"
          id="filter-by-category-button"
          type="button"
        >
          Filter by category
        </button>
      </div>
    </div>
  </div>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-end btn btn-link"
      type="button"
    >
      Select
    </button>
  </div>
  <br />
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity no category not completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id2"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id2"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id2"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h5
    data-test-class="category-header"
  >
    Foo
  </h5>
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity foo not completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id3"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id3"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id3"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity foo not completed product 2
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id4"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id4"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id4"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h5
    data-test-class="category-header"
  >
    Bar
  </h5>
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity bar not completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id5"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id5"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id5"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h2>
    Completed Items
  </h2>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-end btn btn-link"
      type="button"
    >
      Select
    </button>
  </div>
  <div
    class="mb-3 list-group"
  />
</div>
`;

exports[`ListContainer Item Rendering does not render incomplete items when none exist 1`] = `
<div>
  <a
    class="float-end"
    data-discover="true"
    href="/lists"
  >
    Back to lists
  </a>
  <h1>
    foo
  </h1>
  <br />
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    data-test-id="add-item-button"
    type="button"
  >
    Add Item
  </button>
  <form
    autocomplete="off"
    class="collapse"
    data-test-id="list-item-form"
    id="form-collapse"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      role="status"
    >
      <div
        class="placeholder-glow"
      >
        <span
          class="placeholder col-6"
        />
        <span
          class="placeholder col-4"
        />
        <span
          class="placeholder col-8"
        />
      </div>
    </div>
    <div
      class="mb-3 mb-3"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="completed"
          name="completed"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="completed"
          title=""
        >
          Completed
        </label>
      </div>
    </div>
    <div
      class="d-grid gap-2 mt-3"
    >
      <button
        class="btn btn-success"
        type="submit"
      >
        Add New Item
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Collapse Form
      </button>
    </div>
  </form>
  <hr />
  <div
    class="d-flex justify-content-between"
  >
    <h2>
      Items
    </h2>
    <div>
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          class="dropdown-toggle btn btn-light"
          id="filter-by-category-button"
          type="button"
        >
          Filter by category
        </button>
      </div>
    </div>
  </div>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-end btn btn-link"
      type="button"
    >
      Select
    </button>
  </div>
  <br />
  <h2>
    Completed Items
  </h2>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-end btn btn-link"
      type="button"
    >
      Select
    </button>
  </div>
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            completed quantity foo completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="completed-item-refresh-id1"
              type="button"
            >
              <i
                class="fa fa-redo fa-2x text-primary"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="completed-item-edit-id1"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="completed-item-delete-id1"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListContainer Permissions does not render ListForm when user has read permissions 1`] = `
<div>
  <a
    class="float-end"
    data-discover="true"
    href="/lists"
  >
    Back to lists
  </a>
  <h1>
    foo
  </h1>
  <br />
  <p>
    You only have permission to read this list
  </p>
  <hr />
  <div
    class="d-flex justify-content-between"
  >
    <h2>
      Items
    </h2>
    <div>
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          class="dropdown-toggle btn btn-light"
          id="filter-by-category-button"
          type="button"
        >
          Filter by category
        </button>
      </div>
    </div>
  </div>
  <br />
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity no category not completed product
          </span>
        </div>
      </div>
    </div>
  </div>
  <h5
    data-test-class="category-header"
  >
    Foo
  </h5>
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity foo not completed product
          </span>
        </div>
      </div>
    </div>
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity foo not completed product 2
          </span>
        </div>
      </div>
    </div>
  </div>
  <h5
    data-test-class="category-header"
  >
    Bar
  </h5>
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity bar not completed product
          </span>
        </div>
      </div>
    </div>
  </div>
  <h2>
    Completed Items
  </h2>
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            completed quantity foo completed product
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListContainer Permissions renders Add Item button (form collapsed) when user has write permissions 1`] = `
<div>
  <a
    class="float-end"
    data-discover="true"
    href="/lists"
  >
    Back to lists
  </a>
  <h1>
    foo
  </h1>
  <br />
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    data-test-id="add-item-button"
    type="button"
  >
    Add Item
  </button>
  <form
    autocomplete="off"
    class="collapse"
    data-test-id="list-item-form"
    id="form-collapse"
  >
    <div
      aria-busy="true"
      aria-live="polite"
      role="status"
    >
      <div
        class="placeholder-glow"
      >
        <span
          class="placeholder col-6"
        />
        <span
          class="placeholder col-4"
        />
        <span
          class="placeholder col-8"
        />
      </div>
    </div>
    <div
      class="mb-3 mb-3"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="completed"
          name="completed"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="completed"
          title=""
        >
          Completed
        </label>
      </div>
    </div>
    <div
      class="d-grid gap-2 mt-3"
    >
      <button
        class="btn btn-success"
        type="submit"
      >
        Add New Item
      </button>
      <button
        class="btn btn-link"
        type="button"
      >
        Collapse Form
      </button>
    </div>
  </form>
  <hr />
  <div
    class="d-flex justify-content-between"
  >
    <h2>
      Items
    </h2>
    <div>
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          class="dropdown-toggle btn btn-light"
          id="filter-by-category-button"
          type="button"
        >
          Filter by category
        </button>
      </div>
    </div>
  </div>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-end btn btn-link"
      type="button"
    >
      Select
    </button>
  </div>
  <br />
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity no category not completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id2"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id2"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id2"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h5
    data-test-class="category-header"
  >
    Foo
  </h5>
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity foo not completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id3"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id3"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id3"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity foo not completed product 2
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id4"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id4"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id4"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h5
    data-test-class="category-header"
  >
    Bar
  </h5>
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="non-completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            not completed quantity bar not completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="not-completed-item-complete-id5"
              type="button"
            >
              <i
                class="fa fa-check fa-2x text-success"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="not-completed-item-edit-id5"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="not-completed-item-delete-id5"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h2>
    Completed Items
  </h2>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-end btn btn-link"
      type="button"
    >
      Select
    </button>
  </div>
  <div
    class="mb-3 list-group"
  >
    <div
      class="list-item-list-group-item list-group-item"
      data-test-class="completed-item"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <span
            class="list-item-content"
          >
            completed quantity foo completed product
          </span>
          <div
            class=" float-end btn-group"
            role="group"
          >
            <button
              class="p-0 me-3  btn btn-link"
              data-test-id="completed-item-refresh-id1"
              type="button"
            >
              <i
                class="fa fa-redo fa-2x text-primary"
              />
            </button>
            <button
              class="p-0 me-3 btn btn-link"
              data-test-id="completed-item-edit-id1"
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="completed-item-delete-id1"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
